feat: creating top seven service types from services launched
